--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,6 +13,11 @@ main>div {
     justify-content: space-between;
 }
 
+.energiaH, .energiaI{
+    text-align: center;
+}
+
 h4 {
     margin: 0 0 10px;
 }
+
