--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,6 +17,15 @@ main>div {
     text-align: center;
 }
 
+.lista {
+  justify-content: left;
+}
+
+ul {
+    margin: 2px;
+    padding: 2px;
+}
+
 h4 {
     margin: 0 0 10px;
 }
@@ -28,4 +37,11 @@ h4 {
 .atingido {
     border-color: red;
     background-color: rgb(248, 39, 39);
+}
+
+#reload {
+    margin-top: 15px;
+    font-size: 20px;
+    width: 200px;
+    height: 40px;
 }
